crates/typestate-pipeline/tests/ui/stable/transitions_breakpoint_on_sync.stderr
error: `breakpoint` is only valid on `async fn` transitions
  --> tests/ui/stable/transitions_breakpoint_on_sync.rs:12:28
   |
12 |     #[transition(into = B, breakpoint)]
   |                            ^^^^^^^^^^

error: [note] this transition is sync
       = help: remove `breakpoint` (sync transitions resolve immediately) or make the transition `async fn`
  --> tests/ui/stable/transitions_breakpoint_on_sync.rs:13:5
   |
13 |     fn noop(state: A) -> B {
   |     ^^
